# tridash

./: Makefile  Makefile.in  README.md  README.txt  ar01s01.html  ar01s02.html  ar01s03.html  ar01s04.html  ar01s05.html  ar01s06.html  build.lisp.in  builder.lisp  coalescer.lisp  conditions.lisp  configure.ac  examples.adoc  examples.html  home.adoc  home.css  index.html  installation.adoc  installation.html  interface.lisp  ix01.html  lexer.lisp  main.lisp  makefile  meta-node.lisp  metalink.asd  modules.lisp  node-table.lisp  node.lisp  operators.lisp  outer-nodes.lisp  package.lisp  parser.lisp  philosophy.adoc  philosophy.html  primitives.lisp  prog-builder.lisp  (+8 more)
backends/javascript/: analyze.lisp  ast.lisp  backend.lisp  functions.lisp  html.lisp  package.lisp  print.lisp
builders/html/: builder.lisp  package.lisp
doc/: core-libs.adoc  core.adoc  ffi.adoc  optimization.adoc  options.adoc  semantics.adoc  syntax.adoc  tridash.adoc  tridashc.1.adoc  tridashc.adoc  tutorials.adoc
examples/: Makefile  color.html  color.ui.html  limit.html  limit.ui.html  sum.html  sum.ui.html
html/: parser.trd
man/: tridashc.1
manual/: ar01s01.html  ar01s02.html  ar01s03.html  ar01s04.html  ar01s05.html  ar01s06.html  ar01s07.html  ar01s08.html  ar01s11.html  ar01s13.html  index.html  ix01.html
modules/: README.txt  core.trd  core.yml
modules/core/: external.trd  failures.trd  introspection.trd  introspection.yml  (+13 more)
plump/: README  dom.lisp  lexer.lisp  package.lisp  parser.lisp  special-tags.lisp
src/: builder-interface.lisp  builder.lisp  coalescer.lisp  conditions.lisp  expressions.lisp  failures.lisp  interface.lisp  lexer.lisp  macro-runtime.lisp  macros.lisp  main.lisp  meta-node.lisp  module-table.lisp  module.lisp  modules.lisp  node-table.lisp  node.lisp  operators.lisp  outer-nodes.lisp  package.lisp  parser.lisp  prog-builder.lisp  strictness.lisp
style/: asciidoc.css
test/: builder.lisp  lexer.lisp  macros.lisp  package.lisp  parser.lisp  script.lisp  strictness.lisp  util.lisp
tutorials/: LICENSE  Makefile  README.md  ar01s01.html  ar01s02.html  ar01s03.html  ar01s04.html  ar01s05.html  ar01s06.html  ar01s07.html  ar01s08.html  ar01s09.html  ar01s10.html  ar01s11.html  ar01s12.html  index.html
util/: cut.lisp  macros.lisp  misc.lisp  package.lisp
windows/: installer.nsi
(+357 files in other folders)
